@@ -20,6 +20,15 @@ name|java
 operator|.
 name|io
 operator|.
+name|Closeable
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -219,6 +228,19 @@ name|lucene
 operator|.
 name|store
 operator|.
+name|AlreadyClosedException
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
 name|Directory
 import|;
 end_import
@@ -259,6 +281,32 @@ operator|.
 name|store
 operator|.
 name|IndexInput
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|Lock
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|LockObtainFailedException
 import|;
 end_import
 begin_import
@@ -399,6 +447,8 @@ DECL|class|CheckIndex
 specifier|public
 class|class
 name|CheckIndex
+implements|implements
+name|Closeable
 block|{
 DECL|field|infoStream
 specifier|private
@@ -409,6 +459,17 @@ DECL|field|dir
 specifier|private
 name|Directory
 name|dir
+decl_stmt|;
+DECL|field|writeLock
+specifier|private
+name|Lock
+name|writeLock
+decl_stmt|;
+DECL|field|closed
+specifier|private
+specifier|volatile
+name|boolean
+name|closed
 decl_stmt|;
 comment|/**    * Returned from {@link #checkIndex()} detailing the health and status of the index.    *    * @lucene.experimental    **/
 DECL|class|Status
@@ -956,6 +1017,37 @@ parameter_list|(
 name|Directory
 name|dir
 parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|this
+argument_list|(
+name|dir
+argument_list|,
+name|dir
+operator|.
+name|makeLock
+argument_list|(
+name|IndexWriter
+operator|.
+name|WRITE_LOCK_NAME
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**     * Expert: create a directory with the specified lock.    * This should really not be used except for unit tests!!!!    * It exists only to support special tests (such as TestIndexWriterExceptions*),    * that would otherwise be more complicated to debug if they had to close the writer    * for each check.    */
+DECL|method|CheckIndex
+specifier|public
+name|CheckIndex
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|,
+name|Lock
+name|writeLock
+parameter_list|)
+throws|throws
+name|IOException
 block|{
 name|this
 operator|.
@@ -963,9 +1055,83 @@ name|dir
 operator|=
 name|dir
 expr_stmt|;
+name|this
+operator|.
+name|writeLock
+operator|=
+name|writeLock
+expr_stmt|;
+name|this
+operator|.
 name|infoStream
 operator|=
 literal|null
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|writeLock
+operator|.
+name|obtain
+argument_list|(
+name|IndexWriterConfig
+operator|.
+name|WRITE_LOCK_TIMEOUT
+argument_list|)
+condition|)
+block|{
+comment|// obtain write lock
+throw|throw
+operator|new
+name|LockObtainFailedException
+argument_list|(
+literal|"Index locked for write: "
+operator|+
+name|writeLock
+argument_list|)
+throw|;
+block|}
+block|}
+DECL|method|ensureOpen
+specifier|private
+name|void
+name|ensureOpen
+parameter_list|()
+block|{
+if|if
+condition|(
+name|closed
+condition|)
+block|{
+throw|throw
+operator|new
+name|AlreadyClosedException
+argument_list|(
+literal|"this instance is closed"
+argument_list|)
+throw|;
+block|}
+block|}
+annotation|@
+name|Override
+DECL|method|close
+specifier|public
+name|void
+name|close
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|closed
+operator|=
+literal|true
+expr_stmt|;
+name|IOUtils
+operator|.
+name|close
+argument_list|(
+name|writeLock
+argument_list|)
 expr_stmt|;
 block|}
 DECL|field|crossCheckTermVectors
@@ -1120,7 +1286,7 @@ literal|null
 argument_list|)
 return|;
 block|}
-comment|/** Returns a {@link Status} instance detailing    *  the state of the index.    *     *  @param onlySegments list of specific segment names to check    *    *<p>As this method checks every byte in the specified    *  segments, on a large index it can take quite a long    *  time to run.    *    *<p><b>WARNING</b>: make sure    *  you only call this when the index is not opened by any    *  writer. */
+comment|/** Returns a {@link Status} instance detailing    *  the state of the index.    *     *  @param onlySegments list of specific segment names to check    *    *<p>As this method checks every byte in the specified    *  segments, on a large index it can take quite a long    *  time to run. */
 DECL|method|checkIndex
 specifier|public
 name|Status
@@ -1135,6 +1301,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|ensureOpen
+argument_list|()
+expr_stmt|;
 name|NumberFormat
 name|nf
 init|=
@@ -10983,7 +11152,7 @@ return|return
 name|status
 return|;
 block|}
-comment|/** Repairs the index using previously returned result    *  from {@link #checkIndex}.  Note that this does not    *  remove any of the unreferenced files after it's done;    *  you must separately open an {@link IndexWriter}, which    *  deletes unreferenced files when it's created.    *    *<p><b>WARNING</b>: this writes a    *  new segments file into the index, effectively removing    *  all documents in broken segments from the index.    *  BE CAREFUL.    *    *<p><b>WARNING</b>: Make sure you only call this when the    *  index is not opened  by any writer. */
+comment|/** Repairs the index using previously returned result    *  from {@link #checkIndex}.  Note that this does not    *  remove any of the unreferenced files after it's done;    *  you must separately open an {@link IndexWriter}, which    *  deletes unreferenced files when it's created.    *    *<p><b>WARNING</b>: this writes a    *  new segments file into the index, effectively removing    *  all documents in broken segments from the index.    *  BE CAREFUL.    */
 DECL|method|exorciseIndex
 specifier|public
 name|void
@@ -10995,6 +11164,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|ensureOpen
+argument_list|()
+expr_stmt|;
 if|if
 condition|(
 name|result
@@ -11073,6 +11245,38 @@ parameter_list|(
 name|String
 index|[]
 name|args
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|InterruptedException
+block|{
+name|int
+name|exitCode
+init|=
+name|doMain
+argument_list|(
+name|args
+argument_list|)
+decl_stmt|;
+name|System
+operator|.
+name|exit
+argument_list|(
+name|exitCode
+argument_list|)
+expr_stmt|;
+block|}
+comment|// actual main: returns exit code instead of terminating JVM (for easy testing)
+DECL|method|doMain
+specifier|private
+specifier|static
+name|int
+name|doMain
+parameter_list|(
+name|String
+name|args
+index|[]
 parameter_list|)
 throws|throws
 name|IOException
@@ -11215,13 +11419,9 @@ argument_list|(
 literal|"ERROR: missing name for -segment option"
 argument_list|)
 expr_stmt|;
-name|System
-operator|.
-name|exit
-argument_list|(
+return|return
 literal|1
-argument_list|)
-expr_stmt|;
+return|;
 block|}
 name|i
 operator|++
@@ -11268,13 +11468,9 @@ argument_list|(
 literal|"ERROR: missing value for -dir-impl option"
 argument_list|)
 expr_stmt|;
-name|System
-operator|.
-name|exit
-argument_list|(
+return|return
 literal|1
-argument_list|)
-expr_stmt|;
+return|;
 block|}
 name|i
 operator|++
@@ -11312,13 +11508,9 @@ operator|+
 literal|"'"
 argument_list|)
 expr_stmt|;
-name|System
-operator|.
-name|exit
-argument_list|(
+return|return
 literal|1
-argument_list|)
-expr_stmt|;
+return|;
 block|}
 name|indexPath
 operator|=
@@ -11426,13 +11618,9 @@ operator|+
 literal|"corruption, else 0.\n"
 argument_list|)
 expr_stmt|;
-name|System
-operator|.
-name|exit
-argument_list|(
+return|return
 literal|1
-argument_list|)
-expr_stmt|;
+return|;
 block|}
 if|if
 condition|(
@@ -11477,13 +11665,9 @@ argument_list|(
 literal|"ERROR: cannot specify both -exorcise and -segment"
 argument_list|)
 expr_stmt|;
-name|System
-operator|.
-name|exit
-argument_list|(
+return|return
 literal|1
-argument_list|)
-expr_stmt|;
+return|;
 block|}
 name|System
 operator|.
@@ -11499,7 +11683,7 @@ literal|"\n"
 argument_list|)
 expr_stmt|;
 name|Directory
-name|dir
+name|directory
 init|=
 literal|null
 decl_stmt|;
@@ -11522,7 +11706,7 @@ operator|==
 literal|null
 condition|)
 block|{
-name|dir
+name|directory
 operator|=
 name|FSDirectory
 operator|.
@@ -11534,7 +11718,7 @@ expr_stmt|;
 block|}
 else|else
 block|{
-name|dir
+name|directory
 operator|=
 name|CommandLineUtil
 operator|.
@@ -11575,23 +11759,27 @@ operator|.
 name|out
 argument_list|)
 expr_stmt|;
-name|System
-operator|.
-name|exit
-argument_list|(
+return|return
 literal|1
-argument_list|)
-expr_stmt|;
+return|;
 block|}
+try|try
+init|(
+name|Directory
+name|dir
+init|=
+name|directory
+init|;
 name|CheckIndex
 name|checker
-init|=
+operator|=
 operator|new
 name|CheckIndex
 argument_list|(
 name|dir
 argument_list|)
-decl_stmt|;
+init|)
+block|{
 name|checker
 operator|.
 name|setCrossCheckTermVectors
@@ -11627,13 +11815,9 @@ operator|.
 name|missingSegments
 condition|)
 block|{
-name|System
-operator|.
-name|exit
-argument_list|(
+return|return
 literal|1
-argument_list|)
-expr_stmt|;
+return|;
 block|}
 if|if
 condition|(
@@ -11791,10 +11975,6 @@ argument_list|(
 literal|""
 argument_list|)
 expr_stmt|;
-specifier|final
-name|int
-name|exitCode
-decl_stmt|;
 if|if
 condition|(
 name|result
@@ -11803,22 +11983,18 @@ name|clean
 operator|==
 literal|true
 condition|)
-name|exitCode
-operator|=
+block|{
+return|return
 literal|0
-expr_stmt|;
+return|;
+block|}
 else|else
-name|exitCode
-operator|=
+block|{
+return|return
 literal|1
-expr_stmt|;
-name|System
-operator|.
-name|exit
-argument_list|(
-name|exitCode
-argument_list|)
-expr_stmt|;
+return|;
+block|}
+block|}
 block|}
 block|}
 end_class
