@@ -106,6 +106,19 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|store
+operator|.
+name|LockObtainFailedException
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|analysis
 operator|.
 name|CannedTokenStream
@@ -667,6 +680,11 @@ operator|==
 literal|true
 argument_list|)
 expr_stmt|;
+name|checker
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 name|dir
 operator|.
 name|close
@@ -801,6 +819,82 @@ name|close
 argument_list|()
 expr_stmt|;
 comment|// checkindex
+block|}
+DECL|method|testObtainsLock
+specifier|public
+name|void
+name|testObtainsLock
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+literal|null
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+comment|// keep IW open...
+try|try
+block|{
+operator|new
+name|CheckIndex
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"should not have obtained write lock"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|LockObtainFailedException
+name|expected
+parameter_list|)
+block|{
+comment|// ok
+block|}
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 end_class
