@@ -7025,6 +7025,11 @@ operator|.
 name|clean
 argument_list|)
 expr_stmt|;
+name|checker
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 name|String
 name|s
 init|=
@@ -7092,6 +7097,14 @@ literal|1024
 argument_list|)
 expr_stmt|;
 name|checker
+operator|=
+operator|new
+name|CheckIndex
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+name|checker
 operator|.
 name|setInfoStream
 argument_list|(
@@ -7125,6 +7138,11 @@ name|indexStatus
 operator|.
 name|clean
 argument_list|)
+expr_stmt|;
+name|checker
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 name|s
 operator|=
